fixed bug with overflow:hidden in menu

--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,6 @@
         position: relative;
         width: 100%;
         height: 100%;
-        overflow: hidden;
         z-index: 1;
     }
     .circle {
